--- a/src/main/resources/com/example/taxigame/hello-view.fxml
+++ b/src/main/resources/com/example/taxigame/hello-view.fxml
@@ -6,7 +6,7 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.taxi_game_final_project.Controller">
+      fx:controller="com.example.taxigame.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
