--- a/src/main/resources/com/example/taxigame/Tutuorial.fxml
+++ b/src/main/resources/com/example/taxigame/Tutuorial.fxml
@@ -3,7 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taxigame.TutorialController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taxigame.TutorialController">
    <children>
       <Button layoutX="273.0" layoutY="14.0" mnemonicParsing="false" onAction="#up" text="Up" />
       <Button layoutX="531.0" layoutY="188.0" mnemonicParsing="false" onAction="#right" text="Right" />
