--- a/src/main/resources/com/example/taxigame/Game.fxml
+++ b/src/main/resources/com/example/taxigame/Game.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taxigame.Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="734.0" layoutX="137.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="731.0" layoutX="346.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
@@ -28,6 +30,22 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="223.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="430.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="647.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Ellipse fill="#fec942" layoutX="304.0" layoutY="588.0" radiusX="63.0" radiusY="25.0" stroke="BLACK" strokeType="INSIDE" />
+      <Rectangle fx:id="taxi" arcHeight="5.0" arcWidth="5.0" height="56.0" layoutX="223.0" layoutY="560.0" stroke="BLACK" strokeType="INSIDE" width="110.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="0.24703087885985747" startX="0.26128266033254155">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" green="0.6518518328666687" blue="0.12962962687015533" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill></Rectangle>
    </children>
 </AnchorPane>
