--- a/src/main/resources/com/example/taxigame/Game.fxml
+++ b/src/main/resources/com/example/taxigame/Game.fxml
@@ -8,35 +8,30 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taxigame.Controller">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="734.0" layoutX="137.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="731.0" layoutX="346.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="732.0" layoutX="555.0" layoutY="16.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="70.0" layoutX="9.0" layoutY="141.0" stroke="BLACK" strokeType="INSIDE" width="762.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="70.0" layoutX="10.0" layoutY="349.0" stroke="BLACK" strokeType="INSIDE" width="753.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="12.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="222.0" layoutY="15.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="430.0" layoutY="19.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="13.0" layoutY="226.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="222.0" layoutY="226.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="431.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="645.0" layoutY="15.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="643.0" layoutY="228.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="641.0" layoutY="431.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="430.0" layoutY="434.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="222.0" layoutY="435.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="15.0" layoutY="433.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="70.0" layoutX="9.0" layoutY="553.0" stroke="BLACK" strokeType="INSIDE" width="748.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="15.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="223.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="430.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="110.0" layoutX="647.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" width="110.0" />
-      <Rectangle fx:id="taxi" arcHeight="5.0" arcWidth="5.0" height="56.0" layoutX="223.0" layoutY="560.0" stroke="BLACK" strokeType="INSIDE" width="110.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#717375" height="750.0" stroke="BLACK" strokeType="INSIDE" width="760.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fc2b2b" height="110.0" layoutX="15.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff8280" height="110.0" layoutX="222.0" layoutY="15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f77000" height="110.0" layoutX="433.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffd21" height="110.0" layoutX="15.0" layoutY="226.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9dff00" height="110.0" layoutX="222.0" layoutY="226.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#20ab13" height="110.0" layoutX="433.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffcc6e" height="110.0" layoutX="645.0" layoutY="15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fffb1" height="110.0" layoutX="643.0" layoutY="228.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a1fff" height="110.0" layoutX="641.0" layoutY="434.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f3bff" height="110.0" layoutX="433.0" layoutY="435.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fa1ff" height="110.0" layoutX="222.0" layoutY="435.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1ff7ff" height="110.0" layoutX="15.0" layoutY="434.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c71fff" height="110.0" layoutX="15.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1fe1" height="110.0" layoutX="223.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7c6b50" height="110.0" layoutX="433.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#515050" height="110.0" layoutX="643.0" layoutY="635.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0" />
+      <Rectangle fx:id="taxi" arcHeight="5.0" arcWidth="5.0" height="59.0" layoutX="152.0" layoutY="559.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.5" width="110.0">
          <fill>
-            <LinearGradient endX="1.0" endY="0.24703087885985747" startX="0.26128266033254155">
+            <LinearGradient endX="0.7672209026128265" endY="0.5296912114014253" startX="0.517814726840855" startY="0.517814726840855">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="1.0" green="0.6518518328666687" blue="0.12962962687015533" />
+                        <Color red="1.0" green="0.7618442177772522" />
                      </color>
                   </Stop>
                   <Stop offset="1.0">
@@ -46,6 +41,7 @@
                   </Stop>
                </stops>
             </LinearGradient>
-         </fill></Rectangle>
+         </fill>
+      </Rectangle>
    </children>
 </AnchorPane>
